--- a/backend/package.json
+++ b/backend/package.json
@@ -8,12 +8,12 @@
     "build": "tsc",
     "dev": "node --import tsx index.ts",
     "start": "node dist/index.js",
-    "postinstall": "prisma generate || true"
+    "postinstall": "npx prisma generate || true"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "type": "commonjs",
+  "type": "module",
   "devDependencies": {
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.6",
