--- a/backend/package.json
+++ b/backend/package.json
@@ -7,8 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsc",
     "dev": "node --import tsx index.ts",
-    "start": "node dist/index.js",
-    "postinstall": "npx prisma generate"
+    "start": "node dist/index.js"
   },
   "keywords": [],
   "author": "",
