--- a/package.json
+++ b/package.json
@@ -1,8 +1,6 @@
 {
-  "name": "cads-final-root",
-  "version": "1.0.0",
-  "scripts": {
-    "build": "npm install --prefix backend && npm run build --prefix backend && npm install --prefix frontend && npm run build --prefix frontend",
-    "start": "npm start --prefix backend"
-  }
+"scripts": {
+  "build": "npm install --prefix backend && npm install --prefix frontend && npx --prefix backend prisma generate && npm run build --prefix backend && npm run build --prefix frontend",
+  "start": "npm start --prefix backend"
+}
 }
