--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -1,11 +1,12 @@
 {
   "compilerOptions": {
     "outDir": "dist",
+    "rootDir": "src",
     "module": "NodeNext",
     "target": "ES2022",
     "moduleResolution": "NodeNext",
     "types": ["node"],
-    "typeRoots": ["./node_modules/@types", "./src/types"],
+    "typeRoots": ["./node_modules/@types"],
     "sourceMap": true,
     "declaration": true,
     "declarationMap": true,
@@ -14,6 +15,7 @@
     "exactOptionalPropertyTypes": true,
     "strict": true,
     "skipLibCheck": true,
+    "noImplicitAny": false,
     "esModuleInterop": true,
     "jsx": "react-jsx",
     "verbatimModuleSyntax": true,
