fix: resolve TypeScript type definition errors for vite/client and node
- Fix tsconfig.node.json to use 'types: [node]' instead of 'types: [vite/client]'

- Update render.yaml to use npm ci for reproducible installs

- Add .npmrc to ensure devDependencies are installed in production builds

These changes resolve TS2688 errors on Render deployment

--- a/render.yaml
+++ b/render.yaml
@@ -4,8 +4,8 @@ services:
     env: node
     plan: free
     buildCommand: >
-      NPM_CONFIG_PRODUCTION=false npm install --prefix backend &&
-      NPM_CONFIG_PRODUCTION=false npm install --prefix frontend &&
+      NPM_CONFIG_PRODUCTION=false npm ci --prefix backend &&
+      NPM_CONFIG_PRODUCTION=false npm ci --prefix frontend &&
       node ./backend/node_modules/prisma/build/index.js generate --schema=./backend/prisma/schema.prisma &&
       npm run build --prefix backend &&
       npm run build --prefix frontend
@@ -24,11 +24,11 @@ services:
     env: node
     plan: free
     buildCommand: >
-      NPM_CONFIG_PRODUCTION=false npm install &&
+      NPM_CONFIG_PRODUCTION=false npm ci &&
       npm run build
     startCommand: npm run preview
     staticPublishPath: dist
-    dirs:
+    directories:
       source: frontend
     envVars:
       - key: NPM_CONFIG_PRODUCTION
