--- a/frontend/tsconfig.node.json
+++ b/frontend/tsconfig.node.json
@@ -6,7 +6,8 @@
     "moduleResolution": "bundler",
     "allowSyntheticDefaultImports": true,
     "resolveJsonModule": true,
-    "types": ["node"]
+    "lib": ["ES2022"],
+    "types": ["node", "vite/client"]
   },
   "include": ["vite.config.ts", "vitest.config.ts"]
 }
