--- a/render.yaml
+++ b/render.yaml
@@ -4,9 +4,9 @@ services:
     env: node
     plan: free
     buildCommand: >
-      NPM_CONFIG_PRODUCTION=false npm ci --prefix backend &&
-      NPM_CONFIG_PRODUCTION=false npm ci --prefix frontend &&
-      node ./backend/node_modules/prisma/build/index.js generate --schema=./backend/prisma/schema.prisma &&
+      npm ci --prefix backend &&
+      npm ci --prefix frontend &&
+      npx -y prisma generate --schema=backend/prisma/schema.prisma &&
       npm run build --prefix backend &&
       npm run build --prefix frontend
     startCommand: npm start --prefix backend
@@ -15,18 +15,12 @@ services:
         value: "false"
     directories:
       source: backend
-    routes:
-      - path: /api
-        destination: http://localhost:3000/api
 
-  - type: web
+  - type: static
     name: cads-final-frontend
-    env: node
-    plan: free
     buildCommand: >
-      NPM_CONFIG_PRODUCTION=false npm ci &&
+      npm ci &&
       npm run build
-    startCommand: npm run preview
     staticPublishPath: dist
     directories:
       source: frontend
