fix: create ambient type declarations for Vite to resolve build on Render
- Create types/vite.d.ts with ImportMeta and Vite constant declarations
- Update tsconfigfiles to use typeRoots pointing to ./types and ./node_modules/@types
- Remove explicit vite/client from types array - rely on ambient declarations instead
- Add noImplicitAny: false for better compatibility

This approach doesn't depend on successful installation of Vite type package
on Render, making the build more robust across different environments.

--- a/frontend/tsconfig.node.json
+++ b/frontend/tsconfig.node.json
@@ -7,7 +7,8 @@
     "allowSyntheticDefaultImports": true,
     "resolveJsonModule": true,
     "lib": ["ES2022"],
-    "types": ["node", "vite/client"]
+    "typeRoots": ["../types", "./node_modules/@types"],
+    "noImplicitAny": false
   },
   "include": ["vite.config.ts", "vitest.config.ts"]
 }
