--- a/frontend/tsconfig.app.json
+++ b/frontend/tsconfig.app.json
@@ -7,6 +7,7 @@
     "module": "ESNext",
     "skipLibCheck": true,
     "typeRoots": ["./types", "./node_modules/@types"],
+    "types": ["react", "react-dom", "vite/client"],
     "noImplicitAny": false,
 
     /* Bundler mode */
