--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-"scripts": {
-  "build": "npm install --prefix backend && npm install --prefix frontend && node ./backend/node_modules/prisma/build/index.js generate --schema=./backend/prisma/schema.prisma && npm run build --prefix backend && npm run build --prefix frontend",
-  "start": "npm start --prefix backend"
-}
+  "scripts": {
+    "build": "node ./build.js",
+    "start": "npm start --prefix backend"
+  }
 }
