--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "@clerk/clerk-react": "^5.59.2",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-is": "^18.3.1",
     "react-router-dom": "^7.11.0",
     "recharts": "^3.6.0"
   },
